--- a/src/BuyHistory.css
+++ b/src/BuyHistory.css
@@ -1,28 +1,3 @@
-/* .box2 {
-    position: relative;
-    margin-top: 5% ;
-    margin-right: 10%;
-    margin-bottom: 10%;
-    border: solid 3px #ffa341;
-    width: 70%;
-}
-.box2 .box2-title {
-    position: absolute;
-    display: inline-block;
-    top: -27px;
-    left: -3px;
-    padding: 0 9px;
-    height: 25px;
-    line-height: 25px;
-    font-size: 17px;
-    background: #ffa341;
-    color: #ffffff;
-    font-weight: bold;
-    border-radius: 5px 5px 0 0;
-}
-.box2 .container {
-    margin-top: 5%; 
-} */
 
 .cart-item {
     background: #ffead6;
@@ -37,19 +12,22 @@
 }
 
 .cart-title {
-    background: #ffab4c;    
-
-}
-
-.tax {
+    background: #ffab4c;
+    color: #FFF;    
 
 }
 
 .total-price {
     width: 100%;
     text-align: right;
+    font-size:18px;
+    padding-bottom:15px;
 }
+.tax{
+    width: 100%;
+    text-align: right;
 
+}
 
 .box2 {
     margin: 2em 0;
@@ -97,10 +75,6 @@
     border: 1px solid #0094ff;
 }
 
-
-
-
-
 .time {
     display: flex;
     flex-wrap: wrap;
@@ -108,7 +82,6 @@
     margin: 0;
     padding: 0;
 }
-
 
 .time-item {
     margin-bottom: 1%;
