--- a/src/OrderFinish.css
+++ b/src/OrderFinish.css
@@ -75,3 +75,143 @@
     margin-bottom: 5%;
     cursor: pointer;
 }
+
+
+
+.contact th{
+	width:240px;
+	padding:18px 0;
+	vertical-align: top;
+	font-size: 18px;
+	text-align: left;
+}
+
+.contact td{
+	font-size: 18px;
+	padding:5px 0;	
+}
+
+.contact td input{
+	padding:18px 15px 15px;
+	background-color: #f4f4f4;
+	border:none;
+	font-size:18px;
+}
+.contact_zip {
+    width: 200px;
+}
+
+.contact_zip_left{
+	margin-right:20px;
+}
+
+.contact_zip_right{
+	margin-left:20px;
+	margin-right:20px;
+}
+
+.contact_name{
+    width: 300px;
+}
+
+.contact_mail{
+	width:750px;
+}
+
+.recruit_address {
+    margin: 3px 0;
+}
+
+.contact_button_jushohyoji{
+	vertical-align: middle;
+}
+
+.contact_button_jushohyoji:hover{
+	opacity:.7;
+}
+
+.contact_todofuken{
+	width:300px;
+	margin-bottom:10px;
+	margin-left:50px;
+}
+
+.contact_shikuchouson{
+	width:630px;
+	margin-bottom:10px;
+	margin-left:50px;
+}
+
+.contact_banchi{
+	width:510px;
+	margin-left:44px;
+}
+
+.contact th{
+	width:240px;
+	padding:18px 0;
+	vertical-align: top;
+	font-size: 18px;
+	text-align: left;
+}
+ 
+.contact td{
+	font-size: 18px;
+	padding:5px 0;	
+}
+ 
+.contact td input{
+	padding:18px 15px 15px;
+	background-color: #f4f4f4;
+	border:none;
+	font-size:18px;
+}
+.contact_zip {
+    width: 200px;
+}
+ 
+.contact_zip_left{
+	margin-right:20px;
+}
+ 
+.contact_zip_right{
+	margin-left:20px;
+	margin-right:20px;
+}
+ 
+.contact_name{
+    width: 300px;
+}
+ 
+.contact_mail{
+	width:750px;
+}
+ 
+.recruit_address {
+    margin: 3px 0;
+}
+ 
+.contact_button_jushohyoji{
+	vertical-align: middle;
+}
+ 
+.contact_button_jushohyoji:hover{
+	opacity:.7;
+}
+ 
+.contact_todofuken{
+	width:300px;
+	margin-bottom:10px;
+	margin-left:50px;
+}
+ 
+.contact_shikuchouson{
+	width:630px;
+	margin-bottom:10px;
+	margin-left:50px;
+}
+ 
+.contact_banchi{
+	width:510px;
+	margin-left:44px;
+}
